[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]

[node name="Player" type="KinematicBody"]
input_ray_pickable = false
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="StandingUp" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 1.55168, 0 )

[node name="Crouching" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0.777779, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55168, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="AcelTimer" type="Timer" parent="."]
one_shot = true

[node name="CoyoteJump" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="SlideTimer" type="Timer" parent="."]
one_shot = true

[node name="CheckForRoof" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.38503, 0 )
enabled = true
cast_to = Vector3( 0, 1, 0 )

[node name="WallInFront" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.300408, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1.5 )

[node name="CheckVaultingSpace" type="RayCast" parent="."]
cast_to = Vector3( 0, 2, -2 )
[connection signal="timeout" from="SlideTimer" to="." method="_on_SlideTimer_timeout"]
